--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "dependencies": {
     "pinia": "^3.0.1",
     "uuid": "^11.1.0",
+    "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
-    "vuetify": "^3.7.14"
+    "vuetify": "^3.7.14",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
